Version 0.9.41dev (?? ??? ???)
  - Added patch 736202: Improved iCalendar export
  - Fixed bug 732885: Bad SQL in send_reminders.php
  - Fixed bug 739010: error creating postgres tables
  - Fixed bug 740983: in admin.php, should be "false" not "$false"
  - Added patch 710867: Allow postgresql connections through unix sockets
  - Added patch 707382: Fix for Oracle - don't use 'as' in SQL.
  - Fixed description to display https links as links.
  - Added patch 690347: CSV export for pilot-datebook
  - Added patch 656318: when adding new user, passwords are not compared
    to determine if they match.
  - Added a config option for persistent connections.
  - Fixed bug 727317: Used html_to_8bits(), not html_to_8bits().
  - Fixed bug 727315: Bad SQL in send_reminders.php
  - Fixed bug 704918: functionality (logic) to admin the boss
  - Fixed bug 705871: Unnecessary rows in webcal_site_extras
  - Fixed bug 703563: catagory "None" not translated if using another language
  - Added "timebar" view that shows users hours in a timebar.
  - Fixed timezone bug 686829: displays pm instead of am for midnight events
  - Fixed timezone bug 686789: TimeZone Error when servertime is midnight
  - Fixed timezone bug 648692: Problem with Timezone Offset
  - Fixed timezone bug 688208: Date wrong in edit & view entry for TZ offsets
  - Fixed timezone bug in function read_events for a negative TZ_OFFSET
  - Fixed timezone bug in function get_entries for a negative TZ_OFFSET
    causing event to displaying on the wrong day.
  - Fixed bug 649681: Wrong date on event detail page
  - Added the ability to create 'nonuser' calendars, such as a corporate
    calendar, and assign the calendar administrator.
  - Removed html headers and common include calls from all files.  All files
    now include init.php and print the header by calling print_header. As a
    result of this cosmetic change, javascript has been moved out of the