@@ -455,7 +455,7 @@ if ( $login == "__public__" && $public_access_others != "Y" )
 if ( $single_user == "N" && $show_participants ) {
   $userlist = get_my_users ();
   $nonusers = get_nonuser_cals ();
-  $userlist = $nonusers + $userlist;
+  $userlist = array_merge($userlist, $nonusers);
   $num_users = 0;
   $size = 0;
   $users = "";
