@@ -41,7 +41,7 @@ else
 if ( $single_user == "N" ) {
   $userlist = get_my_users ();
   $nonusers = get_nonuser_cals ();
-  $userlist = $nonusers + $userlist;
+  $userlist = array_merge($userlist, $nonusers);
   $num_users = 0;
   $size = 0;
   $users = "";
