@@ -1,4 +1,6 @@
 Version 0.9.41dev (?? ??? ???)
+  - Fixed bug 736411: Array elements disappear if using + to concat
+  - Added patch 673899: Viewing rights set wrong for view_entry.php
   - Added patch 736202: Improved iCalendar export
   - Fixed bug 732885: Bad SQL in send_reminders.php
   - Fixed bug 739010: error creating postgres tables
